--- a/index.html
+++ b/index.html
@@ -28,17 +28,18 @@
 	<div style="height: 2vh; background-color: rgba(237, 237, 237, 1);"></div>
 
 	<div class="stuInfoTitle"><span
-			style="color: rgb(135, 135, 135);font-size: 2.3vh;font-family: 微软雅黑;line-height: 110px;margin: 30px;">姓名</span>
+			style="color: rgb(135, 135, 135);font-size: 2.1vh;font-family: 微软雅黑;line-height: 110px;margin: 30px;">姓名</span>
 	</div>
 	<div class="stuInfo"><span id="xingming1"
 			style="font-size: 2.3vh; font-family: 微软雅黑; font-weight: normal; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: center; line-height: 110px; letter-spacing: 0px;">张子晗</span>
 	</div>
 
 	<div class="stuInfoTitle"><span
-			style="color: rgb(135, 135, 135);font-size: 2.3vh;font-family: 微软雅黑;line-height: 110px;margin: 30px;">照片</span>
+			style="color: rgb(135, 135, 135);font-size: 2.1vh;font-family: 微软雅黑;line-height: 110px;margin: 30px;">照片</span>
 	</div>
 	<div class="stuInfo" style="height: 20vh;">
-		<div style="height: 2vh;"></div><img src="./3782593.jpg" alt="" style="width: 25%;;margin: auto;">
+		<div style="height: 2vh"></div>
+		<div style="height: 15vh;width: 15vh; margin: auto;"><img src="./3782593.jpg" alt="" style="width: 100%; height: 100%; margin: auto;"></div>
 	</div>
 
 
@@ -47,44 +48,42 @@
 		<div style="height: 2vh;"></div><img src="./3916676.gif" alt="" style="width: 90%;height: 60%;margin: auto;">
 	</div>
 	<div class="stuInfoTitle"><span
-			style="color: rgb(135, 135, 135);font-size: 2.3vh;font-family: 微软雅黑;line-height: 110px;margin: 30px;">状态码</span>
+			style="color: rgb(135, 135, 135);font-size: 2.1vh;font-family: 微软雅黑;line-height: 110px;margin: 30px;">状态码</span>
 	</div>
-	<div class="stuInfo" style="height: 30vh;">
+	<div class="stuInfo" style="height: 24vh;">
 		<div style="height: 2vh;"></div><img src="./qrcode.png" alt="" style="width: 40%;;margin: auto;">
 	</div>
-	<div class="stuInfoTitle"><span
-			style="color: rgb(135, 135, 135);font-size: 2.3vh;font-family: 微软雅黑;line-height: 110px;margin: 30px;">状态</span>
-	</div>
+	<div style="height: 1.5vh; background-color: rgba(47, 99, 164, 0.05);"></div>
 	<div class="stuInfo"><span id="churuxiao1"
-			style="font-size: 3.5vh; font-family: 微软雅黑; font-weight: bold; font-style: normal; color: green; text-decoration: none; text-align: center; line-height: 110px; letter-spacing: 0px;">
+			style="font-size: 2.75vh; font-family: 微软雅黑; font-weight: bold; font-style: normal; color: green; text-decoration: none; text-align: center; line-height: 110px; letter-spacing: 0px;margin: auto;">
 			允许入校
 		</span></div>
 	<div class="stuInfoTitle"><span
-			style="color: rgb(135, 135, 135);font-size: 2.3vh;font-family: 微软雅黑;line-height: 110px;margin: 30px;">学工号</span>
+			style="color: rgb(135, 135, 135);font-size: 2.1vh;font-family: 微软雅黑;line-height: 110px;margin: 30px;">学工号</span>
 	</div>
 	<div class="stuInfo"><span id="xuehao1"
-			style="font-size: 2.3vh; font-family: 微软雅黑; font-weight: normal; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: center; line-height: 110px; letter-spacing: 0px;">2020140251</span>
+			style="font-size: 2vh; font-family: 微软雅黑; font-weight: normal; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: center; line-height: 110px; letter-spacing: 0px;">2020140251</span>
 	</div>
 	<div class="stuInfoTitle"><span
-			style="color: rgb(135, 135, 135);font-size: 2.3vh;font-family: 微软雅黑;line-height: 110px;margin: 30px;">出入校时间</span>
+			style="color: rgb(135, 135, 135);font-size: 2.1vh;font-family: 微软雅黑;line-height: 110px;margin: 30px;">出入校时间</span>
 	</div>
 	<div class="stuInfo"><span id="shijian"
-			style="font-size: 2.3vh; font-family: 微软雅黑; font-weight: normal; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: center; line-height: 110px; letter-spacing: 0px;">
+			style="font-size: 2vh; font-family: 微软雅黑; font-weight: normal; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: center; line-height: 110px; letter-spacing: 0px;">
 			2021-08-18 09:53:57
 		</span></div>
 	<div class="stuInfoTitle"><span
-			style="color: rgb(135, 135, 135);font-size: 2.3vh;font-family: 微软雅黑;line-height: 110px;margin: 30px;">学院</span>
+			style="color: rgb(135, 135, 135);font-size: 2.1vh;font-family: 微软雅黑;line-height: 110px;margin: 30px;">学院</span>
 	</div>
 	<div class="stuInfo"><span
-			style="font-size: 2.3vh; font-family: 微软雅黑; font-weight: normal; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: center; line-height: 110px; letter-spacing: 0px;">
+			style="font-size: 2vh; font-family: 微软雅黑; font-weight: normal; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: center; line-height: 110px; letter-spacing: 0px;">
 			信息与通信工程学院
 		</span></div>
 	<div style="width: 100%;height: 10vh;background-color: rgba(237, 237, 237, 1);">
 		<!-- <div style="height: 1.5vh;"></div>
 		<div id="more">更多</div> -->
 	</div>
-	<div style="width: 100%;height: 10vh;position: fixed;bottom: 0;background-color: white;">
-		<div style="height: 1.5vh;"></div>
+	<div style="width: 100%;height: 7vh;position: fixed;bottom: 0;background-color: white;">
+		<div style="height: 1.2vh;"></div>
 		<div id="more">更多</div>
 	</div>
 	<script type="text/javascript">
@@ -149,11 +148,11 @@
 <style type="text/css">
 	.stuInfoTitle {
 		background-color: rgba(47, 99, 164, 0.05);
-		height: 5.9vh;
+		height: 5vh;
 	}
 
 	.stuInfo {
-		height: 6.4vh;
+		height: 6vh;
 		text-align: center;
 	}
 
@@ -162,14 +161,14 @@
 	}
 
 	#more {
-		width: 16vh;
-		height: 6vh;
+		width: 10vh;
+		height: 5vh;
 		border-radius: 60px;
 		border: 2px solid #4285f4;
 		margin-left: 20px;
 		text-align: center;
-		font-size: 2.6vh;
+		font-size: 1.8vh;
 		color: #4285f4;
-		line-height: 6vh;
+		line-height: 5vh;
 	}
 </style>
