--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			style="color: rgb(135, 135, 135);font-size: 2.1vh;font-family: 微软雅黑;line-height: 110px;margin: 30px;">姓名</span>
 	</div>
 	<div class="stuInfo"><span id="xingming1"
-			style="font-size: 2.3vh; font-family: 微软雅黑; font-weight: normal; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: center; line-height: 110px; letter-spacing: 0px;">张子晗</span>
+			style="font-size: 2.3vh; font-family: 微软雅黑; font-weight: normal; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: center; line-height: 110px; letter-spacing: 0px;">何澍义</span>
 	</div>
 
 	<div class="stuInfoTitle"><span
