--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="zuishangmian">
 		<div style="height: 1.5vh;"></div>
 		<img src="./liucheng.svg" alt="" style="float: left;width: 4%;margin-left: 20px;margin-right: 10px;">
-		<p style="font-size: 1.8vh;font-family: PingFang SC;font-weight: bold;color: #333;">当前部门：人工智能学院
+		<p style="font-size: 1.8vh;font-family: PingFang SC;font-weight: bold;color: #333;">当前部门：信息与通信工程学院
 		</p>
 	</div>
 	<div style="height: 2vh; background-color: rgba(237, 237, 237, 1);"></div>
@@ -31,7 +31,7 @@
 			style="color: rgb(135, 135, 135);font-size: 2.1vh;font-family: 微软雅黑;line-height: 110px;margin: 30px;">姓名</span>
 	</div>
 	<div class="stuInfo"><span id="xingming1"
-			style="font-size: 2.3vh; font-family: 微软雅黑; font-weight: normal; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: center; line-height: 110px; letter-spacing: 0px;">何澍义</span>
+			style="font-size: 2.3vh; font-family: 微软雅黑; font-weight: normal; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: center; line-height: 110px; letter-spacing: 0px;">张瑞</span>
 	</div>
 
 	<div class="stuInfoTitle"><span
