--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	</div>
 	<div class="stuInfo" style="height: 20vh;">
 		<div style="height: 2vh"></div>
-		<div style="height: 15vh;width: 15vh; margin: auto;"><img src="./微信图片_20220318104058.jpg" alt="" style="width: 100%; height: 100%; margin: auto;"></div>
+		<div style="height: 15vh;width: 15vh; margin: auto;"><img src="./lqpic.jfif" alt="" style="width: 100%; height: 100%; margin: auto;"></div>
 	</div>
 
 
@@ -76,7 +76,7 @@
 	</div>
 	<div class="stuInfo"><span
 			style="font-size: 2vh; font-family: 微软雅黑; font-weight: normal; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: center; line-height: 110px; letter-spacing: 0px;">
-			人工智能学院
+		信息与通信工程学院
 		</span></div>
 	<div style="width: 100%;height: 9vh;background-color: rgba(237, 237, 237, 1);">
 		<!-- <div style="height: 1.5vh;"></div>
